# retro-steno

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
captures/stm32delay/: STM32 delay.sal
captures/stm32orig/: STM32 base.sal
lib/app/: alert.c  alert.h  cli.c  cli.h  cmd.c  cmd.h  hbt.c  hbt.h  model_point.c  model_point.h  screen.c  screen.h
lib/app/gfx/: gfx_core.c  gfx_core.h  gfx_font.c  gfx_font.h
lib/app/gfx/fonts/: font_manifest.h  win31_courier_e_10.c  win31_courier_e_10.h  win31_courier_e_12.c  win31_courier_e_15.c
lib/bsp/: bsp.c  bsp.h  display.c  display.h  display_objs.h  exp.c  exp.h  keyboard.c  keyboard.h  led.c  led.h  pinmap.h  scheduler.c  scheduler.h
lib/bsp/devices/displays/: disp_adafruit_tft_128x128px_26mm4x26mm5.c  display_manifest.h
lib/hw/: critical.h  drv_gpio.h  drv_i2c.h  drv_spi.h  drv_ssd1306.h  drv_st7735.h  ssd1306.c  ssd1306.h  ssd1306_reg.h
lib/utils/: logging.c  logging.h  rs_codes.h  rs_colors.c  rs_colors.h  rs_macros.h  rs_stddef.h  rs_stdint.h  rs_stdio.c  rs_stdio.h  rs_string.c  rs_string.h  rs_time.c  rs_time.h  sys_time.c  sys_time.h
main/rp2040/: CMakeLists.txt  auto_set_url.cmake  drv_gpio_rp2040.c  drv_i2c_rp2040.c  drv_spi_rp2040.c  drv_ssd1306_rp2040.c  drv_st7735.c  drv_stdio_rp2040.c  drv_time_rp2040.c  main.c  sys_time_rp2040.c
main/unittest/: CMakeLists.txt  critical_test.c  drv_gpio_test.c  drv_i2c_test.c  drv_st7735_test.c  main.c  sys_time_test.c  test_ioexp.c
main/unittest/tests/: test_display.c  test_display.h  test_gpio.c  test_gpio.h  test_ioexp.c  test_ioexp.h  test_keyboard.c  test_keyboard.h  test_modelpoint.c  test_modelpoint.h  test_mp_keyboard.c  test_mp_keyboard.h  test_string.c  test_string.h  test_sys_time.c  test_sys_time.h
main/unittest/utils/: log_check.c  log_check.h
python/: win31_courier_e_10.c
src/: exp.c  exp.h  main.c
test/unittest/: test_foo.c
